--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,20 @@
     width: 300px;
 }
 
-li>* {
+a {
     text-decoration: none;
     color: black;
+}
+
+main {
+    .img-container {
+        width: 100%;
+        aspect-ratio: 2 / 3;
+    }
+
+    .img-container img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 }
