--- a/src/App.css
+++ b/src/App.css
@@ -28,3 +28,12 @@ img {
     width: 100%;
     object-fit: cover;
 }
+
+.movie-page {
+    height: 600px;
+
+    img {
+        height: 100%;
+        object-fit: contain;
+    }
+}
